# p2p-messenger

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  flake.nix  p2p-messenger.podspec  package.json  treefmt.nix  tsconfig.json  ubrn.config.yaml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/p2pmessenger/: P2pMessengerModule.kt  P2pMessengerPackage.kt
cpp/: p2p-messenger.cpp  p2p-messenger.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/p2pmessenger/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/P2pMessengerExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/P2pMessengerExample.xcodeproj/: project.pbxproj
example/ios/P2pMessengerExample.xcodeproj/xcshareddata/xcschemes/: P2pMessengerExample.xcscheme
example/ios/P2pMessengerExampleTests/: P2pMessengerExampleTests.m
example/src/: App.tsx
ios/: P2pMessenger.h  P2pMessenger.mm
rust/: Cargo.toml
rust/src/: lib.rs
src/: NativeP2pMessenger.ts  index.tsx
